--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,13 +5,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
+
     <uses-feature android:name="android.hardware.location.gps" />
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_controlcar"
-        android:label="@string/app_name"
-        android:roundIcon="@drawable/ic_controlcar"
+        android:icon="@drawable/ic_controlcardriver"
+        android:label="@string/app_driver"
+        android:roundIcon="@drawable/ic_controlcardriver"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
